# cybulde-data-versioning

./: .docker-compose.yaml.swp  README.md  docker-compose.yaml  pyproject.toml
.dvc/: config
cybulde/: version_data.py
cybulde/config_schemas/: config_schema.py
cybulde/utils/: .data_utils.py.swp  config_utils.py  data_utils.py  utils.py
data/: raw.dvc
docker/: .Dockerfile.swp  Dockerfile
docker/scripts/: .startup-script.sh.swp  startup-script.sh
