[tool.poetry]
name = "cybulde-data-versioning"
version = "0.1.0"
description = "Data versioning for cyber-bullying model"
authors = ["abhipreets2 <abhipreets2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
dvc = {version = "2.56.0", extras = ["gdrive", "gs"]}
hydra-core = "~=1.3.2"
pydantic = "~=1.10.7"
google-cloud-secret-manager = "~=2.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "~=7.3"
black = "~=23.3"
isort = "~=5.12"
flake8 = "~=6.0"
mypy = "~=1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
